--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,11 @@
   <parent>
       <groupId>com.celements</groupId>
       <artifactId>celements</artifactId>
-      <version>2.1</version>
+      <version>3.1-SNAPSHOT</version>
   </parent>
   <artifactId>xwiki-platform-search-lucene</artifactId>
   <name>XWiki Platform - Search - Lucene</name>
+  <version>3.0-SNAPSHOT</version>
   <description>XWiki Platform - Search - Lucene</description>
   <scm>
     <connection>scm:git:git://github.com/celements/xwiki-platform-search.git</connection>
@@ -15,11 +16,6 @@
     <url>https://github.com/celements/xwiki-platform-search</url>
   </scm>
   <dependencies>
-    <dependency>
-      <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-oldcore</artifactId>
-      <version>4.1</version>
-    </dependency>
     <dependency>
       <groupId>org.apache.lucene</groupId>
       <artifactId>lucene-core</artifactId>
@@ -49,11 +45,11 @@
     <dependency>
       <groupId>org.apache.tika</groupId>
       <artifactId>tika-parsers</artifactId>
-      <version>0.9</version>
+      <version>1.1</version>
       <exclusions>
         <exclusion>
-          <groupId>asm</groupId>
-          <artifactId>asm</artifactId>
+          <groupId>rome</groupId>
+          <artifactId>rome</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
@@ -62,13 +58,13 @@
     <dependency>
       <groupId>org.xwiki.commons</groupId>
       <artifactId>xwiki-commons-test</artifactId>
-      <version>3.4</version>
+      <version>4.1.3</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.xwiki.platform</groupId>
       <artifactId>xwiki-platform-oldcore</artifactId>
-      <version>4.1</version>
+      <version>4.1.3</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
