replace xwiki dependency verions with property

--- a/pom.xml
+++ b/pom.xml
@@ -58,13 +58,13 @@
     <dependency>
       <groupId>org.xwiki.commons</groupId>
       <artifactId>xwiki-commons-test</artifactId>
-      <version>4.1.3</version>
+      <version>${xwiki.dependency.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.xwiki.platform</groupId>
       <artifactId>xwiki-platform-oldcore</artifactId>
-      <version>4.1.3</version>
+      <version>${xwiki.dependency.version}</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
