--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
   <parent>
       <groupId>com.celements</groupId>
       <artifactId>celements</artifactId>
-      <version>3.1-SNAPSHOT</version>
+      <version>2.2</version>
   </parent>
   <artifactId>xwiki-platform-search-lucene</artifactId>
   <name>XWiki Platform - Search - Lucene</name>
-  <version>3.0-SNAPSHOT</version>
+  <version>2.0-SNAPSHOT</version>
   <description>XWiki Platform - Search - Lucene</description>
   <scm>
     <connection>scm:git:git://github.com/celements/xwiki-platform-search.git</connection>
@@ -41,33 +41,19 @@
       <artifactId>commons-collections</artifactId>
       <version>3.2.1</version>
     </dependency>
-    <!-- Attachments parsing -->
-    <dependency>
-      <groupId>org.apache.tika</groupId>
-      <artifactId>tika-parsers</artifactId>
-      <version>1.1</version>
-      <exclusions>
-        <exclusion>
-          <groupId>rome</groupId>
-          <artifactId>rome</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-
     <!-- Test dependencies -->
     <dependency>
-      <groupId>org.xwiki.commons</groupId>
-      <artifactId>xwiki-commons-test</artifactId>
-      <version>${xwiki.dependency.version}</version>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-core-shared-tests</artifactId>
+      <version>2.7.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-oldcore</artifactId>
-      <version>${xwiki.dependency.version}</version>
-      <type>test-jar</type>
-      <scope>test</scope>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.5.8</version>
     </dependency>
+
     <!-- For some tests we need to have the Servlet API JAR available -->
     <dependency>
       <groupId>javax.servlet</groupId>
