--- a/pom.xml
+++ b/pom.xml
@@ -45,22 +45,23 @@
     <dependency>
       <groupId>org.apache.tika</groupId>
       <artifactId>tika-parsers</artifactId>
-      <version>1.1</version>
+      <version>1.2</version>
       <exclusions>
+        <!-- We want to choose the SLF4J binding only when XWiki is packaged. -->
         <exclusion>
-          <groupId>rome</groupId>
-          <artifactId>rome</artifactId>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
+    <dependency>
+      <!-- Replace a runtime transitive dependency of tika-parsers because it includes old NekoHTML classes. -->
+      <groupId>de.l3s.boilerpipe</groupId>
+      <artifactId>boilerpipe</artifactId>
+      <version>1.2.0-xwiki</version>
+    </dependency>
 
     <!-- Test dependencies -->
-    <dependency>
-      <groupId>org.xwiki.commons</groupId>
-      <artifactId>xwiki-commons-test</artifactId>
-      <version>${xwiki.dependency.version}</version>
-      <scope>test</scope>
-    </dependency>
     <dependency>
       <groupId>org.xwiki.platform</groupId>
       <artifactId>xwiki-platform-oldcore</artifactId>
