--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,21 @@
       <version>1.91</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.tika</groupId>
+      <artifactId>tika-core</artifactId>
+      <version>1.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tika</groupId>
+      <artifactId>tika-parsers</artifactId>
+      <version>1.3</version>
+    </dependency>
+    <dependency>
+      <groupId>asm</groupId>
+      <artifactId>asm</artifactId>
+      <version>1.5.3</version>
+    </dependency>
 
     <!-- For some tests we need to have the Servlet API JAR available -->
     <dependency>
