--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
     <dependency>
       <groupId>com.celements</groupId>
       <artifactId>celements-core</artifactId>
-      <version>1.141-SNAPSHOT</version>
+      <version>1.141</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
