--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,8 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <!-- IMPORTANT: includes transitive dependency 'poi-ooxml-4.0.1'
+        on tika upgrade match other existing versions accordingly -->
       <groupId>org.apache.tika</groupId>
       <artifactId>tika-parsers</artifactId>
       <version>1.21</version>
