--- a/pom.xml
+++ b/pom.xml
@@ -59,14 +59,11 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.apache.tika</groupId>
-      <artifactId>tika-core</artifactId>
-      <version>1.3</version>
-    </dependency>
-    <dependency>
+      <!-- IMPORTANT: includes transitive dependency 'poi-ooxml-4.0.1'
+        on tika upgrade match other existing versions accordingly -->
       <groupId>org.apache.tika</groupId>
       <artifactId>tika-parsers</artifactId>
-      <version>1.3</version>
+      <version>1.21</version>
     </dependency>
     <dependency>
       <groupId>asm</groupId>
