exclude CXF from tika

--- a/pom.xml
+++ b/pom.xml
@@ -40,8 +40,7 @@
     <dependency>
       <groupId>commons-collections</groupId>
       <artifactId>commons-collections</artifactId>
-      </dependency>
-    <!-- Test dependencies -->
+    </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
@@ -64,6 +63,13 @@
       <groupId>org.apache.tika</groupId>
       <artifactId>tika-parsers</artifactId>
       <version>1.21</version>
+      <exclusions>
+        <exclusion>
+          <!--  exclude CXF since we're already including Jersey as JAX-RS implementation -->
+          <groupId>org.apache.cxf</groupId>
+          <artifactId>cxf-rt-rs-client</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>asm</groupId>
