--- a/pom.xml
+++ b/pom.xml
@@ -48,13 +48,13 @@
     <dependency>
       <groupId>com.celements</groupId>
       <artifactId>celements-model</artifactId>
-      <version>4.2</version>
+      <version>4.3-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.celements</groupId>
       <artifactId>celements-core</artifactId>
-      <version>4.3</version>
+      <version>4.4</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
