--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,11 @@
       <artifactId>servlet-api</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>xml-apis</groupId>
+      <artifactId>xml-apis</artifactId>
+      <scope>test</scope>
+ </dependency>
   </dependencies>
   <build>
     <plugins>
