--- a/pom.xml
+++ b/pom.xml
@@ -93,10 +93,12 @@
       <artifactId>servlet-api</artifactId>
       <scope>test</scope>
     </dependency>
+    <!-- required for AttachmentDataTest#getFullTextFromOpenXML, may be dropped with Java11+ -->
     <dependency>
       <groupId>org.apache.xmlgraphics</groupId>
       <artifactId>batik-ext</artifactId>
-      <version>1.8</version>
+      <version>1.7</version>
+      <scope>test</scope>
     </dependency>
     
   </dependencies>
