--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
         on tika upgrade match other existing versions accordingly -->
       <groupId>org.apache.tika</groupId>
       <artifactId>tika-parsers</artifactId>
-      <version>1.22</version>
+      <version>1.26</version>
       <exclusions>
         <exclusion>
           <!--  exclude CXF since we're already including Jersey as JAX-RS implementation -->
@@ -92,6 +92,14 @@
           <!--  exclude quartz since we're already including it in xwiki-plugin-scheduler -->
           <groupId>org.quartz-scheduler</groupId>
           <artifactId>quartz</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>jul-to-slf4j</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>jcl-over-slf4j</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
