--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
   <parent>
     <groupId>com.celements</groupId>
     <artifactId>celements</artifactId>
-    <version>5.2-SNAPSHOT</version>
+    <version>5.2</version>
   </parent>
   <artifactId>xwiki-platform-search-lucene</artifactId>
   <name>XWiki Platform - Search - Lucene</name>
@@ -42,19 +42,19 @@
     <dependency>
       <groupId>com.celements</groupId>
       <artifactId>celements-shared-tests-deprecated</artifactId>
-      <version>5.0-SNAPSHOT</version>
+      <version>5.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.celements</groupId>
       <artifactId>celements-model</artifactId>
-      <version>5.1-SNAPSHOT</version>
+      <version>5.1</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.celements</groupId>
       <artifactId>celements-core</artifactId>
-      <version>5.1-SNAPSHOT</version>
+      <version>5.1</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
