--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
     </dependency>
     <dependency>
       <groupId>com.celements</groupId>
+      <artifactId>celements-performance</artifactId>
+      <version>5.0-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.celements</groupId>
       <artifactId>celements-model</artifactId>
       <version>5.4</version>
       <scope>provided</scope>
@@ -53,7 +59,7 @@
     <dependency>
       <groupId>com.celements</groupId>
       <artifactId>celements-core</artifactId>
-      <version>5.5</version>
+      <version>5.6</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
